@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:               App-Monupco-OpenShift-Express
-version:            0.01
+version:            0.02
 abstract:           monupco.com registration agent for OpenShift Express / Perl applications
 author:
     - Alexander Todorov <atodorov@otb.bg>
-license:            MIT
+license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
@@ -14,6 +14,10 @@ requires:
     JSON:            0
     LWP::UserAgent:  0
     Pod::Simple:     0
+resources:
+    bugtracker:  https://github.com/monupco/monupco-openshift-express-perl/issues
+    homepage:    https://github.com/monupco/monupco-openshift-express-perl
+    repository:  https://github.com/monupco/monupco-openshift-express-perl
 no_index:
     directory:
         - t
