@@ -6,7 +6,14 @@ WriteMakefile(
     NAME              => 'App::Monupco::OpenShift::Express',
     ABSTRACT          => 'monupco.com registration agent for OpenShift Express / Perl applications',
     VERSION_FROM      => 'lib/App/Monupco/OpenShift/Express.pm', # finds $VERSION
-    'LICENSE'         => 'MIT',
+    LICENSE           => 'perl',
+    META_MERGE => {
+        resources => {
+            repository => 'https://github.com/monupco/monupco-openshift-express-perl',
+            bugtracker => 'https://github.com/monupco/monupco-openshift-express-perl/issues',
+            homepage   => 'https://github.com/monupco/monupco-openshift-express-perl',
+        },
+    },
     PREREQ_PM         => {JSON => 0, LWP::UserAgent => 0, Pod::Simple => 0},
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
        (AUTHOR         => 'Alexander Todorov <atodorov@otb.bg>') : ()),
