@@ -1,4 +1,5 @@
 Revision history for Perl extension App::Monupco::OpenShift::Express.
 
-See git log
+See https://github.com/monupco/monupco-openshift-express-perl/commits/master
+
 
